--- a/MathParserAngularUI/Views/Shared/_Layout.cshtml
+++ b/MathParserAngularUI/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <meta name="description" content="Math Parser test" />
 </head>
 <body data-ng-app="main" data-ng-controller="RootController">
     <!--[if lt IE 7]>
@@ -43,6 +44,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
+    @RenderSection("scripts", false)
 </body>
 </html>
